# shipyard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
.shipyard/: config.toml
agents/: ci.md
commands/: bump.md  cancel.md  changelog.md  cloud.md  config.md  doctor.md  pr.md  quarantine.md  queue.md  run.md  ship.md  status.md  targets.md  upgrade.md  wait.md
docs/: agent-integration.md  cli-reference.md  cloud-retarget.md  cutover.md  examples.md  gate-scripts.md  governance.md  install.md  post-release-sync.md  profiles.md  runner-watchdog.md  ship-resume.md  ship-state-machine.md  targets.md  waiting.md  workflows.md
examples/: diagnostics_demo.rs
hooks/: check-cli.sh  hooks.json  version-skill-hint.sh
planning/: shipyard-hardening.md  shipyard-versioning-acceptance.md
scripts/: benchmark_read_paths.py  ci_matrix.py  compare_cli_surface.py  compare_run_json_parity.py  doc_sync_check.py  doc_sync_map.json  finish_line_status.py  install-githooks.sh  package_release.py  release-macos-local.sh  release.sh  release_env.py  release_macos_local.py  skill_path_map.json  skill_sync_check.py  test_ci_matrix.py  test_compare_cli_surface.py  test_finish_line_status.py  test_package_release.py  test_release_env.py  test_release_macos_local.py  test_release_workflow.py  test_update_drift_tracker.py  test_validate_webhook_tunnel_live.py  update_drift_tracker.py  validate_auto_merge_live.py  validate_cloud_executor_live.py  validate_cloud_live.py  validate_ship_live.py  validate_ssh_live.py  validate_webhook_tunnel_live.py  version_bump_check.py  versioning.json
src/: app.rs  branch.rs  changelog.rs  classify.rs  cloud.rs  cloud_records.rs  config.rs  daemon_ipc.rs  daemon_runtime.rs  daemon_version.rs  diagnostics.rs  doctor.rs  evidence.rs  gate_scripts.rs  governance.rs  identity.rs  init_config.rs  job.rs  lane_policy.rs  lib.rs  main.rs  output.rs  paths.rs  pin.rs  platform.rs  pr.rs  pr_text.rs  preflight.rs  prepared_state.rs  queue.rs  reconcile.rs  registrar.rs  runner_watchdog.rs  ship.rs  ship_state.rs  supervised.rs  tree_drift.rs  tunnel.rs  wait.rs  wait_transport.rs  (+3 more)
tests/: test_cli.py  test_cli_auto_merge.py  test_cli_cloud_add_lane.py  test_cli_cloud_handoff.py  test_cli_cloud_retarget.py  test_cli_codex_regressions.py  test_cli_daemon_refresh.py  test_cli_doctor_release_chain.py  test_cli_doctor_tag_drift.py  test_cli_governance_diff.py  test_cli_watch.py  (+23 more)
(+197 files in other folders)
