[package]
name = "shipyard"
version = "0.54.0"
edition = "2024"
description = "Cross-platform CI coordination for local, SSH, and cloud runners."
rust-version = "1.92"

[lib]
name = "shipyard"
path = "src/lib.rs"

[[bin]]
name = "shipyard"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
fs2 = "0.4.3"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
regex = "1.12.2"
tempfile = "3.23.0"
toml = "0.8.23"
wait-timeout = "0.2.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
