[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipyard"
version = "0.44.0"
description = "Cross-platform CI coordination — local VMs, SSH hosts, cloud runners"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Daniel Raffel" }]
keywords = ["ci", "cross-platform", "validation", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
shipyard = "shipyard.cli:main"
sy = "shipyard.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests requiring real git repos or SSH",
    "state_machine: ship-state-machine transition tests (#101 Phase B)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
